package authhandler

import (
	errm "authentication_service/core/errmodule"
	protoobj "authentication_service/core/proto"
	"authentication_service/rest_user_service/handler"
	"errors"
	"github.com/sirupsen/logrus"
	"net/http"
	"strings"
)

type GetTokensPairReq struct {
	UserID *string `json:"user_id"`
}

// RefreshTokensHandler –û–±–Ω–æ–≤–ª–µ–Ω–∏–µ —Ç–æ–∫–µ–Ω–æ–≤
// @Summary –û–±–Ω–æ–≤–ª–µ–Ω–∏–µ —Ç–æ–∫–µ–Ω–æ–≤
// @Description –û–±–Ω–æ–≤–ª—è–µ—Ç Access –∏ Refresh —Ç–æ–∫–µ–Ω—ã –Ω–∞ –æ—Å–Ω–æ–≤–µ –¥–µ–π—Å—Ç–≤—É—é—â–µ–≥–æ Refresh —Ç–æ–∫–µ–Ω–∞
// @Tags auth
// @Accept json
// @Produce json
// @Param Authorization header string true "Bearer <refresh_token>"
// @Success 200 {object} typescore.TokenPair "–£—Å–ø–µ—Ö"
// @Failure 400 {object} handler.ErrorResponse "–ù–µ–∫–æ—Ä—Ä–µ–∫—Ç–Ω—ã–π –∑–∞–ø—Ä–æ—Å"
// @Failure 401 {object} handler.ErrorResponse "–ù–µ–≤–∞–ª–∏–¥–Ω—ã–π –∏–ª–∏ –ø—Ä–æ—Å—Ä–æ—á–µ–Ω–Ω—ã–π —Ç–æ–∫–µ–Ω"
// @Failure 500 {object} handler.ErrorResponse "–û—à–∏–±–∫–∞ —Å–µ—Ä–≤–µ—Ä–∞"
// @Router /api/auth/refresh [post]
func (s *AuthReg) RefreshTokensHandler(w http.ResponseWriter, r *http.Request) (interface{}, *errm.Error) {
	logrus.Info("ü§ç RefreshTokensHandler")
	ctx := r.Context()

	// –ü–æ–ª—É—á–µ–Ω–∏–µ Refresh —Ç–æ–∫–µ–Ω–∞ –∏–∑ –∑–∞–≥–æ–ª–æ–≤–∫–∞ Authorization
	authHeader := r.Header.Get("Authorization")
	if authHeader == "" {
		return nil, errm.NewError("refresh_token_not_found", errors.New("refresh token not found"))
	}

	parts := strings.Split(authHeader, " ")
	if len(parts) != 2 || parts[0] != "Bearer" {
		return nil, errm.NewError("invalid_authorization_header", errors.New("invalid authorization header"))
	}

	refreshToken := parts[1]

	// –ü–æ–ª—É—á–µ–Ω–∏–µ IP-–∞–¥—Ä–µ—Å–∞ –∫–ª–∏–µ–Ω—Ç–∞
	ip := r.RemoteAddr
	if strings.Contains(ip, ":") {
		ip = strings.Split(ip, ":")[0]
	}

	// –ü—Ä–æ–≤–µ—Ä–∫–∞ –∏ –æ–±–Ω–æ–≤–ª–µ–Ω–∏–µ —Ç–æ–∫–µ–Ω–æ–≤
	newTokenPair, err := s.ipc.ClientAuthServiceProto.RefreshTokens(ctx, &protoobj.RefreshTokensRequest{ClientIp: ip, RefreshToken: refreshToken})
	if err != nil {
		return nil, errm.NewError("token_generation_error", err)
	}

	return newTokenPair, nil
}

// IssueTokensHandler –í—ã–¥–∞—á–∞ –ø–∞—Ä—ã —Ç–æ–∫–µ–Ω–æ–≤ (Access + Refresh)
// @Summary –í—ã–¥–∞—á–∞ –ø–∞—Ä—ã —Ç–æ–∫–µ–Ω–æ–≤
// @Description –í—ã–¥–∞–µ—Ç Access –∏ Refresh —Ç–æ–∫–µ–Ω—ã –¥–ª—è –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è —Å —É–∫–∞–∑–∞–Ω–Ω—ã–º GUID
// @Tags auth
// @Accept json
// @Produce json
// @Param guid query string true "GUID –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è"
// @Success 200 {object} typescore.TokenPair "–£—Å–ø–µ—Ö"
// @Failure 400 {object} handler.ErrorResponse "–ù–µ–∫–æ—Ä—Ä–µ–∫—Ç–Ω—ã–π –∑–∞–ø—Ä–æ—Å"
// @Failure 500 {object} handler.ErrorResponse "–û—à–∏–±–∫–∞ —Å–µ—Ä–≤–µ—Ä–∞"
// @Router /api/auth/issue [post]
func (s *AuthReg) IssueTokensHandler(w http.ResponseWriter, r *http.Request) (interface{}, *errm.Error) {
	logrus.Info("ü§ç IssueTokensHandler")
	ctx := r.Context()

	tokenReq := &GetTokensPairReq{}
	if errObj := handler.ParseRequestBodyPost(r, tokenReq); errObj != nil {
		return nil, errObj
	}
	if tokenReq == nil || tokenReq.UserID == nil {
		return nil, errm.NewError("empty_obj", errors.New("empty_obj"))
	}

	ip := r.RemoteAddr
	if strings.Contains(ip, ":") {
		ip = strings.Split(ip, ":")[0]
	}

	// –ì–µ–Ω–µ—Ä–∞—Ü–∏—è —Ç–æ–∫–µ–Ω–æ–≤
	accessToken, err := s.ipc.ClientAuthServiceProto.IssueTokens(ctx, &protoobj.IssueTokensRequest{UserId: *tokenReq.UserID, ClientIp: ip})
	if err != nil {
		return nil, errm.NewError("token_generation_error", err)
	}

	return accessToken, nil
}
